--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="./main.css">
+  </head>
   <body>
-    <div id="react"></div>
-    <div id="vue"></div>
+    <div class="main">
+      <div class="reactMain" id="react"></div>
+      <div class="vueMain" id="vue"></div>
+    </div>
     <script src="/dist/single-spa.config.js"></script>
   </body>
 </html>
